--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-   <title>React App</title>
+   <title>FoodWasteApp</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
